# xhptdc8_babel

./: .clang-format  .gitignore  README.md
.github/workflows/: build_all.yml  dummy_msbuild.yml  infoToolBuild.yml  infoTool_build.yml  readout_build.yml  test.yml  ug_example_msbuild.yml  util_msbuild.yml  util_test_msbuild.yml
dummy/: README.md  build_ms.ps1  xHPTDC8_RC.h  xHPTDC8_dummy_interface.cpp  xHPTDC8_dummy_interface.h
dummy/msvscpp/: xhptdc8_dummy.sln
dummy/msvscpp/msvscpp/: cpp.hint  msvscpp.cpp  msvscpp.h  msvscpp.rc  msvscpp.vcxproj  msvscpp.vcxproj.filters  pch.h  resource.h
go/info/src/: info_aux.go  xhptdc8_info.go
go/info/src-cgo/: README.md  go.mod  info_aux.go  xhptdc8_driver_64.lib  xhptdc8_info.go
go/info/src-cgo/xhptdc8_info_display/: utilities.go  xhptdc8_info_display.go
go/info/src/xhptdc8_info_display/: xhptdc8_info_display.go
go/info/src/xhptdc8_wrapper/: xhptdc8_wrapper.go
include/: README.md  crono_interface.h  xHPTDC8_interface.h  xHPTDC8_internal_interface.h  xhptdc8_util.h
lib/: README.md  xhptdc8_driver_64.lib  xhptdc8_util.exp  xhptdc8_util.lib  xhptdc8_util_64.lib
lib/dummy/: README.md  xhptdc8_driver_64.lib  xhptdc8_util.lib
lib/include/: crono_interface.h  xHPTDC8_interface.h  xHPTDC8_internal_interface.h  xhptdc8_util.h
lib/x64/: xHPTDC8_dummy.lib  xhptdc8_driver_64.lib  xhptdc8_util.lib  xhptdc8_util_64.lib
lib/x64dummy/: README.md  xhptdc8_driver_64.lib  xhptdc8_util_64.exp  xhptdc8_util_64.lib
lib/x86/: xHPTDC8_dummy.lib  xhptdc8_driver.lib  xhptdc8_util.lib
lib/x86dummy/: README.md  xhptdc8_driver.lib  xhptdc8_util.lib
rust/poclib/: Cargo.toml  README.md
rust/poclib/src/: lib.rs
rust/poclib/test_poclib/: test_poclib.sln
rust/poclib/test_poclib/test_poclib/: test_poclib.cpp  test_poclib.vcxproj  test_poclib.vcxproj.filters
rust/readout/: .gitignore  Cargo.toml  G.csv  README.md  build.rs  output.csv  wrapper.h
rust/readout/Build_x64/: .rustc_info.json
rust/readout/Release_x64/: .rustc_info.json
rust/readout/Release_x86/: .rustc_info.json
rust/readout/X86_OUTPUT/: .rustc_info.json
rust/readout/src/: main.rs  readout_aux.rs
rust/readout/src/bindings/: bindings.rs
rust/readout/src/bindings/x64/: bindings_64.rs
rust/readout/src/bindings/x86/: bindings.rs
ug_example/: README.md
ug_example/src/: xhptdc8_user_guide_example.c  xhptdc8_user_guide_example.cpp
ug_example/tools/: CMakeLists.txt
ug_example/ug_example_msvscpp/: ug_example_msvscpp.sln
ug_example/ug_example_msvscpp/ug_example_msvscpp/: ug_example_msvscpp.vcxproj  ug_example_msvscpp.vcxproj.filters  xhptdc8_user_guide_example.cpp  xhptdc8_user_guide_example.h
util/: README.md
util/include/: xhptdc8_util.h
util/info/: src.rar
util/info/src/: info_aux.go  info_details.go  xhptdc8_info.go
util/info/src-cgo/: go.mod  xhptdc8_info.go
util/info/src/xhptdc8_info_display/: xhptdc8_info_display.go
util/info/src/xhptdc8_wrapper/: utilities.go  xhptdc8_wrapper.go
util/lib/x86/: xhptdc8_util.lib
util/msvscpp/: xhptdc8_util_projects.sln
util/test_msvscpp/: test_msvscpp.sln
util/test_msvscpp/test_msvscpp/: test_msvscpp.vcxproj  test_msvscpp.vcxproj.filters  util_test_msvscpp.rc  xhptds8_test_util.cpp
util/util/: README.md
util/util/msvscpp/: cpp.hint  util.sln  util.vcxproj  util.vcxproj.filters
util/util/src/: dllmain.cpp  errors.cpp  errors.h  pch.h  resource.h  util.rc  xhptdc8_util.cpp  xhptdc8_util_yaml.cpp  xhptdc8_util_yaml.h
util/util/src/ryml_src/c4/: base64.cpp  base64.hpp  charconv.hpp  compiler.hpp  error.cpp  format.cpp  language.hpp  memory_resource.cpp  memory_util.hpp  substr.hpp  time.cpp  time.hpp
util/util/src/ryml_src/c4/ext/: fast_float.hpp
util/util/src/ryml_src/c4/yml/: common.cpp  common.hpp  parse.cpp  preprocess.cpp  preprocess.hpp  tree.cpp  tree.hpp  writer.hpp
util/util/tools/: CMakeLists.txt
util/util/util_msvscpp/: util.vcxproj  util.vcxproj.filters
util/util_msvscpp/: util_msvscpp.sln  xhptdc8_util.cpp  xhptdc8_util_yaml.cpp  xhptdc8_util_yaml.h
util/util_msvscpp/util_msvscpp/: dllmain.cpp  pch.h  util.rc  util_msvscpp.h  util_msvscpp.vcxproj  util_msvscpp.vcxproj.filters
util/util_msvscpp/util_msvscpp/ryml_src/c4/: base64.cpp  blob.hpp  error.hpp  format.cpp  format.hpp  memory_resource.hpp  memory_util.cpp  szconv.hpp  types.hpp  windows.hpp
util/util_msvscpp/util_msvscpp/ryml_src/c4/yml/: common.cpp  node.hpp  parse.cpp  parse.hpp  tree.hpp  writer.hpp
util/util_test/: README.md
util/util_test/msvscpp/: util_test.sln  util_test.vcxproj  util_test.vcxproj.filters
util/util_test/src/: resource.h  util_test_msvscpp.rc  xhptds8_test_util.cpp
util/util_test/tools/: CMakeLists.txt
util/util_unit_test/: NewFunction.cpp  all_error_messages.cpp  apply_yaml.cpp  resource.h  util_unit_test.rc  util_unit_test.sln  util_unit_test.vcxproj  util_unit_test.vcxproj.filters
