[package]
name = "poclib"
version = "0.1.0"
authors = ["Bassem-Ramzy <75851720+Bassem-Ramzy@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[lib]
crate-type = ["cdylib"]
