[package]
name = "xhptdc8_readout"
version = "0.1.0"
build = "build.rs"
authors = ["Bassem-Ramzy <75851720+Bassem-Ramzy@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
yaml-rust = "0.4"
colored = "2"

[build-dependencies]
bindgen = "0.58.1"
