[package]
name = "xhptdc8_readout"
version = "0.1.0"
build = "build.rs"
authors = ["Bassem-Ramzy <75851720+Bassem-Ramzy@users.noreply.github.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
colored = "2"
indicatif = {version = "*", features = ["rayon"]}

[build-dependencies]
bindgen = "0.58.1"
